document declaration: use DUChainUtils to get the arguments context

This works for Python as well, then.
BUG:330725